--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -2,6 +2,6 @@
   community.general.jenkins_job:
     config: "{{ lookup('file', 'templates/folder.xml') }}"
     name: test
-    password: admin123
+    password: Admin123
     url: http://172.31.12.244:8080
-    user: admin
+    user: Admin
