--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Create a jenkins job using basic authentication
   community.general.jenkins_job:
-    config: "{{ lookup('file', 'templates/folder.xml') }}"
+    config: "{{ lookup('file', 'templates/test.xml') }}"
     name: test
     password: Admin123
     url: http://172.31.12.244:8080
