--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Create a jenkins job using basic authentication
   community.general.jenkins_job:
     config: "{{ lookup('file', 'templates/test.xml') }}"
-    name: testtt
+    name: test
     password: Admin123
     url: http://172.31.12.244:8080
     user: Admin
