--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -10,7 +10,7 @@
 - name: Create a multi branch pipeline
   community.general.jenkins_job:
     config: "{{ lookup('file', 'templates/mbranch.xml') }}"
-    name: testm
+    name: "{{item.name}}"
     password: Admin123
     url: http://172.31.12.244:8080
     user: Admin
