--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -1,16 +1,27 @@
-- name: Create a jenkins job using basic authentication
+#- name: Create a jenkins job using basic authentication
+#  community.general.jenkins_job:
+#    config: "{{ lookup('file', 'templates/test.xml') }}"
+#    name: test
+#    password: Admin123
+#    url: http://172.31.12.244:8080
+#    user: Admin
+
+
+- name: Create folders
   community.general.jenkins_job:
-    config: "{{ lookup('file', 'templates/test.xml') }}"
-    name: test
+    config: "{{ lookup('file', 'templates/mbranch.xml') }}"
+    name: "{{item.name}}"
     password: Admin123
     url: http://172.31.12.244:8080
     user: Admin
+  loop:
+    - { name: "ci-pipelines"}
 
 
 - name: Create a multi branch pipeline
   community.general.jenkins_job:
     config: "{{ lookup('file', 'templates/mbranch.xml') }}"
-    name: "{{item.name}}"
+    name: "ci-pipelines/{{item.name}}"
     password: Admin123
     url: http://172.31.12.244:8080
     user: Admin
