--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -9,7 +9,7 @@
 
 - name: Create folders
   community.general.jenkins_job:
-    config: "{{ lookup('file', 'templates/mbranch.xml') }}"
+    config: "{{ lookup('file', 'templates/folder.xml') }}"
     name: "{{item.name}}"
     password: Admin123
     url: http://172.31.12.244:8080
