--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -17,13 +17,8 @@
   loop:
     - { name: "ci-pipelines"}
 
+- name: include multi branch task file
+  ansible.builtin.include_tasks: mbranch.yml
 
-- name: Create a multi branch pipeline
-  community.general.jenkins_job:
-    config: "{{ lookup('file', 'templates/mbranch.xml') }}"
-    name: "ci-pipelines/{{item.name}}"
-    password: Admin123
-    url: http://172.31.12.244:8080
-    user: Admin
   loop:
-    - { name: "ctest"}
+    - { name: "cart"}
