Added Jenkins File

--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -19,6 +19,5 @@
 
 - name: include multi branch task file
   ansible.builtin.include_tasks: mbranch.yml
-
   loop:
-    - { name: "cart"}
+    - { name: "ctest"}
