--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -20,4 +20,9 @@
 - name: include multi branch task file
   ansible.builtin.include_tasks: mbranch.yml
   loop:
-    - { name: "ctest"}
+    - { name: "cart"}
+    - { name: "catalogue"}
+    - { name: "user"}
+    - { name: "shipping"}
+    - { name: "payment"}
+    - { name: "frontend"}
